# MHTMLconverter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
mhtmlconverter/: fileutility.py  htmlutility.py  mhtml.py
mhtmlconverter/cli/: html2mhtml.py  html2mtml.py  md2mhtml.py  mhtml2html.py
tests/: test_fileutility.py  test_html.py  test_md.py  test_mhtml.py
tests/resources/: test.html  test.md  test_local.html  test_local.md  test_mhtml.html  test_mhtml.mhtml  test_mhtml_css.mhtml
