[metadata]
name = mhtmlconverter
author = Arnaud Revel
author_email = revel.arnaud@gmail.com
version = 1.0
license_files = LICENCE
url = https://github.com/arnaudrevel/MHTMLconverter
description = tools to convert markdown or html files including images to a single MHTML self-content file

[options]
packages = find:
python_requires = >= 3.9
install_requires =
    beautifulsoup4==4.12.2
    click==8.1.3
    colorama==0.4.6
    Markdown==3.4.3
    soupsieve==2.4.1